fixing whitespace bug that was causing the TOC to get pushed down

--- a/style.css
+++ b/style.css
@@ -160,8 +160,13 @@ a:hover {
     color: #0088cc;
 }
 
-h2,h3,h4 {
-    margin-top: 2rem;
+h2 {
+    padding-top: 2rem;
+    margin-top: 0;
+}
+
+h3,h4 {
+    margin-top: 1.5rem;
     line-height: 1.35;
 }
 h5,h6 {
